# r-share

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  README.md  docker-compose.yml  docker-start.ps1  docker-start.sh  install.sh  justfile
.github/workflows/: release.yml
pages/: index.html  index.js  style.css
scripts/: install.ps1
server/: .dockerignore  Dockerfile  pom.xml
server/src/main/java/com/scar/server/Controller/: SessionController.java
server/src/main/java/com/scar/server/Dto/: ListenRequest.java  ListenResponse.java  ServeRequest.java  ServeResponse.java
server/src/main/java/com/scar/server/Model/: Session.java
server/src/main/java/com/scar/server/Service/: SessionService.java
server/src/main/java/com/scar/server/Socket/: FileTransferHandler.java  FileTransferServer.java  SocketSessionRegistry.java
server/src/main/resources/: application.properties
server/src/test/java/com/scar/server/: ApplicationTests.java
src/: cli.rs
src/args/: health.rs  init.rs  listen.rs  mod.rs  serve.rs  trust.rs
src/config/: constants.rs
src/crypto/: encryption.rs  key_exchange.rs  mod.rs  signing.rs
src/dirs/: config.rs  contacts.rs  keys.rs  mod.rs
src/server/: mod.rs  relay.rs
src/utils/: error.rs  hash.rs  message.rs
